Fix contact centering on mobile

--- a/css/footer.css
+++ b/css/footer.css
@@ -12,6 +12,7 @@
 .contact-us{
 	margin-left: -30px;
 	padding: 0;
+	margin: auto;
 	color: white;
 	font: "proximanova-light";
 }
